Add export to Excel feature

--- a/index.html
+++ b/index.html
@@ -321,18 +321,21 @@
 
 				<div id="content-data" class="content">
 					<h2>Pobrane Dane</h2>
-					<div class="filters">
-						<button class="filter-button" data-status="all">Wszystkie</button>
-						<button class="filter-button" data-status="A">Zaakceptowane</button>
-						<button class="filter-button" data-status="R">Odrzucone</button>
-						<button class="filter-button" data-status="C">
-							Zanieczyszczone
-						</button>
-					</div>
-					<div id="fetched_data"></div>
-					<div id="pagination"></div>
-					<!-- Kontener na paginację -->
-				</div>
+                                        <div class="filters">
+                                                <button class="filter-button" data-status="all">Wszystkie</button>
+                                                <button class="filter-button" data-status="A">Zaakceptowane</button>
+                                                <button class="filter-button" data-status="R">Odrzucone</button>
+                                                <button class="filter-button" data-status="C">
+                                                        Zanieczyszczone
+                                                </button>
+                                        </div>
+                                        <div class="actions">
+                                                <button id="export_data">Eksportuj do Excel</button>
+                                        </div>
+                                        <div id="fetched_data"></div>
+                                        <div id="pagination"></div>
+                                        <!-- Kontener na paginację -->
+                                </div>
 
 				<div id="content-reports" class="content">
 					<h2>Raporty</h2>
